# Speech-to-Knowledge

./: CMakeLists.txt  LICENSE  README.md  analyze_text.cpp  config.example.ini  config.ini  deterministic_fhir_mapper.cpp  server_transcribe_audio.cpp  transcribe_audio.cpp  transcribe_audio_adaptive_energy.cpp
.github/workflows/: pylint.yml
